--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,8 @@
 
 @import './variables/tipografia';
 @import './variables/colores';
+@import './variables/extends';
+@import './variables/mixins';
 
 @import './secciones/general';
 @import './secciones/header';
