--- a/scss/secciones/_footer.scss
+++ b/scss/secciones/_footer.scss
@@ -25,16 +25,14 @@ ul {
 }
 
 .secFooter {
+  @extend .flexcenter;
   margin-top: 10px;
-  display: flex;
-  justify-content: center;
   align-items: flex-start;
 }
 
 .divCopyRight {
+  @extend .flexcenter;
   margin-top: 10px;
-  display: flex;
-  justify-content: center;
   align-items: center;
 }
 
@@ -44,8 +42,7 @@ ul {
 }
 
 .info {
-  display: flex;
-  justify-content: center;
+  @extend .flexcenter;
   align-items: center;
 }
 
