--- a/scss/secciones/_header.scss
+++ b/scss/secciones/_header.scss
@@ -14,7 +14,7 @@
   color: $coloTexto;
   border: $coloTexto solid 3px;
   padding: 15px;
-  border-radius: 5px;
+  border-radius: 25px 0px;
   display: inline;
   font-size: medium;
   margin-top: 10px;
