--- a/scss/secciones/_mobile.scss
+++ b/scss/secciones/_mobile.scss
@@ -179,7 +179,8 @@
   .img-thumbnail {
     margin-top: 4vw;
   }
-  .textoPqehistoria, .textoPqevision{
+  .textoPqehistoria,
+  .textoPqevision {
     font-size: 5vw;
   }
 }
