--- a/scss/secciones/_general.scss
+++ b/scss/secciones/_general.scss
@@ -129,12 +129,12 @@ img.btn-whatsapp {
   bottom: 20px;
   right: 20px;
   cursor: pointer;
-  border-radius:100px !important;
-  }
-  img.btn-whatsapp:hover{
-  border-radius:100px !important;
-  -webkit-box-shadow: 0px 0px 15px 0px rgba(7,94,84,1); 
-  -moz-box-shadow: 0px 0px 15px 0px rgba(7,94,84,1);
-  box-shadow: 0px 0px 15px 0px rgba(7,94,84,1);
+  border-radius: 100px !important;
+}
+img.btn-whatsapp:hover {
+  border-radius: 100px !important;
+  -webkit-box-shadow: 0px 0px 15px 0px rgba(7, 94, 84, 1);
+  -moz-box-shadow: 0px 0px 15px 0px rgba(7, 94, 84, 1);
+  box-shadow: 0px 0px 15px 0px rgba(7, 94, 84, 1);
   transition-duration: 1s;
-  } 
+}
