--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@1,700&family=Ubuntu:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Maven+Pro:wght@600&family=PT+Sans:ital,wght@1,700&family=Ubuntu:wght@300&display=swap");
 * {
   margin: 0;
   padding: 0; }
@@ -29,26 +31,6 @@ html {
 .billetes {
   max-width: 100vw; }
 
-.imgContenedor {
-  position: relative;
-  display: inline-block;
-  text-align: center; }
-
-.divCentrado {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border: #fff solid 2px;
-  border-radius: 15px; }
-
-.textoSobreImg {
-  color: white;
-  padding: 15px;
-  font-size: 49px;
-  animation-duration: 2s;
-  animation-name: crecerTexto; }
-
 @keyframes crecerTexto {
   0% {
     opacity: 0; }
@@ -69,12 +51,11 @@ html {
 .tituloAlianzas,
 .tituloproductos,
 .tituloContacto {
-  text-decoration: underline;
-  font-weight: bold;
-  margin-top: 3vw;
-  margin-bottom: 1vw;
-  font-size: 5vw;
-  color: #178aee;
+  color: white;
+  padding: 15px;
+  font-size: 49px;
+  font-family: "PT Sans", sans-serif;
+  text-shadow: 3px 2px 6px #3BCBFF;
   animation-duration: 2s;
   animation-name: mostrar; }
 
@@ -101,8 +82,8 @@ html {
   background-color: #178aee;
   border: #178aee 3px solid;
   border-radius: 40px;
-  padding: 10px;
-  font-size: 43px; }
+  font-size: 2vw;
+  padding: 1vw 3vw; }
 
 .nuestrasAlianzasBtn:hover,
 .productosBtn:hover {
@@ -131,7 +112,11 @@ img.btn-whatsapp:hover {
   color: #178aee;
   box-shadow: -1px 10px 5px 0px rgba(107, 106, 106, 0.75);
   -webkit-box-shadow: -1px 10px 5px 0px rgba(107, 106, 106, 0.75);
-  -moz-box-shadow: -1px 10px 5px 0px rgba(107, 106, 106, 0.75); }
+  -moz-box-shadow: -1px 10px 5px 0px rgba(107, 106, 106, 0.75);
+  font-family: "Maven Pro", sans-serif; }
+
+.dropdown-menu {
+  margin-top: 1.125rem !important; }
 
 .btnHeader {
   text-decoration: none;
@@ -195,7 +180,8 @@ footer {
   width: 100%;
   padding-top: 10px;
   position: relative;
-  bottom: 0vw; }
+  bottom: 0vw;
+  font-family: "PT Sans", sans-serif; }
 
 ul {
   display: inline-block; }
@@ -263,8 +249,39 @@ ul {
   font-size: 2vw; }
 
 .contenedorIndex {
-  background-color: white;
-  font-family: "Ubuntu", sans-serif; }
+  font-family: "Ubuntu", sans-serif;
+  background-image: url(../img/billetes.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: saturation;
+  box-shadow: inset 0px 0px 3000px 3000px rgba(2, 34, 58, 0.6); }
+
+.textoSobreImg {
+  color: white;
+  padding: 15px;
+  font-size: 49px;
+  animation-duration: 2s;
+  animation-name: crecerTexto;
+  font-family: "PT Sans", sans-serif;
+  text-shadow: 3px 2px 6px #3BCBFF; }
+
+.textoSobreImg:hover, .textoSobreImg:focus {
+  background-size: 100% 2px; }
+
+.mainContain {
+  min-height: 33vw; }
+
+.imgContenedor {
+  position: relative;
+  display: inline-block;
+  text-align: center; }
+
+.divCentrado {
+  position: absolute;
+  top: 23vw;
+  left: 46vw;
+  transform: translate(-50%, -50%); }
 
 /* alianzas */
 .textoAlianza {
@@ -292,6 +309,21 @@ ul {
 .logoAliado {
   max-width: 200px; }
 
+.textoPqehistoria,
+.textoPqevision {
+  font-size: 2vw; }
+
+.scrollspy-example {
+  height: 30vw;
+  margin-top: 0.5rem;
+  overflow: auto; }
+
+.lista {
+  font-family: "PT Sans", sans-serif; }
+
+.visionImgAbajo, .viosionImgArriba {
+  margin-top: 4vw; }
+
 /*productos*/
 .productosList {
   display: flex; }
@@ -311,7 +343,8 @@ ul {
   margin-top: 1vw; }
 
 .imagenprod {
-  max-width: 100px; }
+  max-width: 100px;
+  margin-top: 2vw; }
 
 .commentProduct {
   font-size: 34px;
@@ -322,12 +355,8 @@ ul {
   color: #fbfbfb; }
 
 /*contacto*/
-.formulario {
-  border: #0fa3ff 5px solid;
-  padding: 10px;
-  background-color: white; }
-
 input {
+  color: #178aee;
   background-color: #fbfbfb;
   width: 408px;
   height: 40px;
@@ -338,6 +367,7 @@ input {
   margin-bottom: 20px; }
 
 textarea {
+  color: #178aee;
   background-color: #fbfbfb;
   width: 405px;
   height: 150px;
@@ -348,17 +378,22 @@ textarea {
   margin-bottom: 20px;
   padding-top: 15px; }
 
-.formulario input:focus {
-  outline: 0;
-  border: #0899ba 2px solid;
-  transform: scale(1.01);
-  transition: 0.3; }
-
-.formulario textarea:focus {
-  outline: 0;
-  border: #0899ba 2px solid;
-  transform: scale(1.02);
-  transition: 0.3; }
+.formulario {
+  font-family: "PT Sans", sans-serif;
+  border: #0fa3ff 2px solid;
+  padding: 10px;
+  background-color: white;
+  color: #178aee; }
+  .formulario input:focus {
+    outline: 0;
+    border: #09ffeb 2px solid;
+    transform: scale(1.01);
+    transition: 0.3; }
+  .formulario textarea:focus {
+    outline: 0;
+    border: #09ffeb 2px solid;
+    transform: scale(1.02);
+    transition: 0.3; }
 
 .contactoSubmitBtn {
   margin-top: 10px;
@@ -478,11 +513,15 @@ textarea {
     display: none; }
   .nuestrasAlianzasBtn,
   .productosBtn {
-    font-size: 7vw; }
+    font-size: 7vw;
+    padding: 2vw 8vw; }
+  .visionImgAbajo {
+    display: none; }
   /* alianzas */
   .textoAlianza {
     display: none; }
   .img-thumbnail {
     margin-top: 4vw; }
-  .textoPqehistoria, .textoPqevision {
+  .textoPqehistoria,
+  .textoPqevision {
     font-size: 5vw; } }
