--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,6 +14,7 @@
 @import "./secciones/footer";
 @import "./secciones/index";
 @import "./secciones/alianzas";
+@import "./secciones/porQueElegirnos";
 @import "./secciones/productos";
 @import "./secciones/contacto";
 @import "./secciones/mobile";
