--- a/scss/secciones/_general.scss
+++ b/scss/secciones/_general.scss
@@ -24,28 +24,9 @@ html {
   max-width: 100vw;
 }
 
-.imgContenedor {
-  position: relative;
-  display: inline-block;
-  text-align: center;
-}
 
-.divCentrado {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border: #fff solid 2px;
-  border-radius: 15px;
-}
 
-.textoSobreImg {
-  color: white;
-  padding: 15px;
-  font-size: 49px;
-  animation-duration: 2s;
-  animation-name: crecerTexto;
-}
+
 
 @keyframes crecerTexto {
   0% {
@@ -75,12 +56,11 @@ html {
 .tituloAlianzas,
 .tituloproductos,
 .tituloContacto {
-  text-decoration: underline;
-  font-weight: bold;
-  margin-top: 3vw;
-  margin-bottom: 1vw;
-  font-size: 5vw;
-  color: $coloTexto;
+  color: white;
+  padding: 15px;
+  font-size: 49px;
+  font-family: $PTSans;
+  text-shadow: 3px 2px 6px #3BCBFF;
   animation-duration: 2s;
   animation-name: mostrar;
 }
@@ -109,11 +89,12 @@ html {
   margin-top: 10px;
   color: white;
   text-decoration: none;
-  background-color: $coloTexto;
-  border: $coloTexto 3px solid;
+  background-color: #178aee;
+  border: #178aee 3px solid;
   border-radius: 40px;
-  padding: 10px;
-  font-size: 43px;
+  font-size: 2vw;
+  padding: 1vw 3vw;
+  
 }
 
 .nuestrasAlianzasBtn:hover,
