--- a/scss/secciones/_contacto.scss
+++ b/scss/secciones/_contacto.scss
@@ -59,6 +59,10 @@ textarea {
   border-radius: 40px;
   font-size: 20px;
 }
+.contactoSubmitBtn:hover {
+  color: #178aee;
+  background-color: white;
+}
 .mapa {
   margin-top: 15vw;
 }
